<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="details">Details</string>
    <string name="mark">Mark:</string>
    <string name="group">Group:</string>
    <string name="lecture_points">Lecture points:</string>
    <string name="homework_points">Homework points:</string>
    <string name="presence_counter">Presence counter</string>
    <string name="absence_counter">Absence counter</string>
    <string name="all_points">All points</string>
    <string name="index">Index:</string>
    <string name="date_of_lab">Date of lab</string>
    <string name="presence">Presence</string>
    <string name="points">Points</string>
    <string name="loading_string">Loading items...</string>
</resources>